[package]
name = "gaoya"
version = "0.1.1"
authors = ["Sergejs Melderis <sergey.melderis@gmail.com>"]
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/serega/gaoya"
repository = "https://github.com/serega/gaoya"
license = "MIT"
keywords = ["lsh",  "neardup", "dedup"]
description = "Locality Sensitive Hashing Data Structures"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true


[lib]
name = "gaoya"
path = "src/lib.rs"
bench = false

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
sha-1 = "0.9.8"
siphasher = "0.3.7"
random_choice = "0.3.2"
fxhash = "0.2.1"
rayon = "1.5.1"
seahash = "4.1.0"
itertools = "0.10.1"
#num = "0.4.0"
num-traits = "0.2.14"
#ngram = "0.1.13"
shingles = "0.1.1"
crossbeam-utils = "0.8.5"
triomphe = "0.1.3"
fnv = "1.0.7"


[features]
unstable = []






